--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "untitled1",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://IsaacCastilleja.github.io/portfolio",
+  "homepage": "https://IsaacCastilleja.github.io",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
